# killoffer

./: .gitignore  0004-k-bisector.c  0004-median-of-two-sorted-arrays.cpp  0005-zigzag-conversion.c  0007-inflected-words.c  0008-string-to-integer.c  001-frog-jump.cc  0010-regular-expression-matching.c  0011-container-with-most-water.c  0012-integer-to-roman.c  0013-roman-to-integer.c  0017-letter-combinations-of-a-phone-number.cc  0018-4sum.cpp  002-hold-water.cc  0023-merge-k-sorted-lists.cpp  0027-remove-element.cpp  0028-implement-strstr.cpp  0029-divide-two-integers.cpp  003-balance-two-array.cc  0032-longest-valid-parentheses.cpp  0034-find-first-and-last-position-of-element-in-sorted-array.cpp  0035-search-insert-position.cpp  0036-valid-sudoku.cpp  0037-sudoku-solver.cpp  0038-count-and-say.cpp  0039-combination-sum.cpp  0040-combination-sum-ii.cpp  0041-first-missing-positive.cpp  0043-multiply-strings.cpp  0044-wildcard-matching.cpp  0049-group-anagrams.cpp  0050-powx-n.cpp  0056-merge-intervals.cpp  0058-length-of-last-word.cpp  0059-spiral-matrix-ii.cpp  0060-permutation-sequence.cpp  0061-rotate-list.cpp  0064-minimum-path-sum.cpp  0066-plus-one.cpp  0067-add-binary.cpp  (+170 more)
base/: base.c  base.h  linked_list.c  linked_list.h  separator.h  tool.cpp  tool.h  trie.cpp  trie.h
debug/: debug-1266.txt
nowcoder/: input.txt  knapsack.cpp
script/: hold-water.py
sort/: MergeSort.cc  Sort.h
test/: test_linked_list.c
